<resources>
    <string name="app_name">PetAdoption</string>
    <string name="signn">Sign in</string>
    <string name="signu">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Enter your name</string>
    <string name="email">Enter your email</string>
    <string name="yes">whatever you said yes</string>
    <string name="dog_name">Dogs Name</string>
    <string name="Breed">Dog Breed</string>
    <string name="dog_age">Age of Dog</string>
    <string name="dog_gender">Gender of Dog</string>
    <string name="description_of_dog">Description</string>
    <string name="dog_city">City of Dog</string>
    <string name="imageURL">Image of Dog(URL)</string>
    <string name="post_dog">Post</string>
    <string name="Post">Post your Dog</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_home">Back To Home</string>
</resources>